--- a/Project.toml
+++ b/Project.toml
@@ -3,8 +3,12 @@ uuid = "4c20a592-b4de-41d1-8706-b02f346981aa"
 authors = ["aronStalmarck <aron.stalmarck@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+
 [compat]
 julia = "1.6"
+Documenter = "0.27"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
